--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,21 +7,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
+    android:background="@color/white2"
+    android:padding="20dp"
     tools:context=".MainActivity">
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        app:cardCornerRadius="30dp"
-        app:cardElevation="20dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="center_horizontal"
-            android:padding="24dp">
 
             <TextView
                 android:layout_width="match_parent"
@@ -80,7 +68,7 @@
                     android:id="@+id/loginButton"
                     android:textSize="18sp"
                     android:backgroundTint="@color/black"
-                    app:cornerRadius="20dp"/>
+                    app:cornerRadius="5dp"/>
 
                 <ProgressBar
                     android:id="@+id/loginProgressBar"
@@ -90,15 +78,26 @@
                     android:visibility="gone"/>
             </FrameLayout>
 
-            <Button
-                android:id="@+id/goToRegisterButton"
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Don't have an account? Register here"
-                android:layout_marginTop="20dp" />
+                android:layout_marginTop="20dp">
 
-        </LinearLayout>
+                <Button
+                    android:id="@+id/goToRegisterButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Don't have an account? Register here"
+                    android:textColor="@color/black"
+                    app:cornerRadius="5dp"
+                    android:backgroundTint="@color/white2"/>
 
-    </androidx.cardview.widget.CardView>
+                <ProgressBar
+                    android:id="@+id/registerProgressBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:visibility="gone"/>
+            </FrameLayout>
 
 </LinearLayout>
