--- a/app/src/main/res/layout/fragment_detail_story.xml
+++ b/app/src/main/res/layout/fragment_detail_story.xml
@@ -2,15 +2,27 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?attr/colorPrimaryVariant"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        />
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimaryVariant"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:background="@drawable/bg_shape"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:iconTint="?attr/colorPrimary"
+            android:tint="?attr/colorPrimary"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:titleTextAppearance="@style/ToolbarTitleTextStyle" />
+    </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/iv_item_photo_container"
@@ -19,44 +31,47 @@
         android:layout_margin="10dp"
         android:elevation="20dp"
         app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
         app:cardCornerRadius="10dp">
 
         <ImageView
-            android:id="@+id/iv_item_photo"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:id="@+id/iv_detail_photo"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:scaleType="centerCrop"
             android:transitionName="shared_element"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintDimensionRatio="1:1" />
 
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/tv_item_name"
+        android:id="@+id/tv_detail_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingVertical="10dp"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/iv_item_photo_container"/>
+        android:paddingTop="10dp"
+        android:paddingHorizontal="10dp"
+        android:textSize="28sp"
+        app:layout_constraintTop_toBottomOf="@+id/iv_item_photo_container" />
 
     <TextView
-        android:id="@+id/tv_item_description"
+        android:id="@+id/tv_detail_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_item_name" />
+        android:paddingBottom="40dp"
+        android:paddingHorizontal="10dp"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_detail_description"/>
 
     <TextView
-        android:id="@+id/tv_item_date"
+        android:id="@+id/tv_detail_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:textSize="15sp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_item_description" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
