--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@color/white2"
+    android:background="?attr/colorPrimaryVariant"
     android:padding="20dp"
     tools:context=".MainActivity">
 
@@ -19,7 +19,7 @@
                 android:textSize="36sp"
                 android:textAlignment="center"
                 android:textStyle="bold"
-                android:textColor="@color/black"/>
+                android:textColor="?attr/colorOnPrimary"/>
 
             <EditText
                 android:layout_width="match_parent"
@@ -31,7 +31,7 @@
                 android:paddingHorizontal="20dp"
                 android:hint="Email"
                 android:drawableLeft="@drawable/ic_email"
-                android:textColor="@color/black"
+                android:textColor="?attr/colorOnPrimary"
                 android:drawablePadding="8dp"/>
 
             <EditText
@@ -45,7 +45,7 @@
                 android:paddingHorizontal="20dp"
                 android:hint="Password"
                 android:drawableLeft="@drawable/ic_lock"
-                android:textColor="@color/black"
+                android:textColor="?attr/colorPrimary"
                 android:drawablePadding="8dp"/>
 
             <TextView
@@ -65,9 +65,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:text="Login"
+                    android:textColor="?attr/colorPrimary"
                     android:id="@+id/loginButton"
                     android:textSize="18sp"
-                    android:backgroundTint="@color/black"
+                    android:backgroundTint="?attr/colorOnPrimary"
                     app:cornerRadius="5dp"/>
 
                 <ProgressBar
@@ -75,6 +76,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:tint="?attr/colorPrimary"
                     android:visibility="gone"/>
             </FrameLayout>
 
@@ -88,15 +90,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:text="Don't have an account? Register here"
-                    android:textColor="@color/black"
+                    android:textColor="?attr/colorOnPrimary"
                     app:cornerRadius="5dp"
-                    android:backgroundTint="@color/white2"/>
+                    android:backgroundTint="?attr/colorPrimaryVariant"/>
 
                 <ProgressBar
                     android:id="@+id/registerProgressBar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:tint="?attr/colorOnPrimary"
                     android:visibility="gone"/>
             </FrameLayout>
 
