--- a/app/src/main/res/layout/story_card.xml
+++ b/app/src/main/res/layout/story_card.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
     android:elevation="10dp"
+    android:backgroundTint="?attr/colorPrimary"
     app:cardCornerRadius="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
