--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="black2">#616161FF</color>
+    <color name="black">#232323</color>
+    <color name="gray">#61383838</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="white2">#E9E7DF</color>
+    <color name="white_shade">#E9E7DF</color>
     <color name="red">#FF0000</color>
 </resources>
