--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,23 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.StoryApp" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="android:forceDarkAllowed">false</item>
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimaryVariant">@color/white_shade</item>
+        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorSecondary">@color/gray</item>
+
+        <item name="android:statusBarColor">?attr/colorOnPrimary</item>
+        <item name="android:windowLightStatusBar">false</item>
+
     </style>
 
     <style name="Theme.StoryApp" parent="Base.Theme.StoryApp" />
+
+    <style name="ToolbarTitleTextStyle" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="android:textFontWeight">500</item>
+        <item name="android:textSize">26sp</item>
+        <item name="android:textColor">?attr/colorPrimary</item>
+    </style>
 </resources>
