--- a/app/src/main/res/layout/fragment_detail_story.xml
+++ b/app/src/main/res/layout/fragment_detail_story.xml
@@ -10,7 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimaryVariant"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
@@ -19,8 +21,6 @@
             android:layout_height="?attr/actionBarSize"
             android:iconTint="?attr/colorPrimary"
             android:tint="?attr/colorPrimary"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:titleTextAppearance="@style/ToolbarTitleTextStyle" />
     </com.google.android.material.appbar.AppBarLayout>
 
