--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -11,96 +11,97 @@
     android:padding="20dp"
     tools:context=".MainActivity">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Login"
-                android:id="@+id/loginText"
-                android:textSize="36sp"
-                android:textAlignment="center"
-                android:textStyle="bold"
-                android:textColor="?attr/colorOnPrimary"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Login"
+        android:id="@+id/loginText"
+        android:textSize="36sp"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:textColor="?attr/colorOnPrimary"/>
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:id="@+id/ed_login_email"
-                android:background="@drawable/custom_edittext"
-                android:layout_marginTop="40dp"
-                android:paddingVertical="8dp"
-                android:paddingHorizontal="20dp"
-                android:hint="Email"
-                android:drawableLeft="@drawable/ic_email"
-                android:textColor="?attr/colorOnPrimary"
-                android:drawablePadding="8dp"/>
+    <com.example.storyapp.ui.custom.EmailEditText
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:id="@+id/ed_login_email"
+        android:background="@drawable/custom_edittext"
+        android:layout_marginTop="40dp"
+        android:paddingVertical="8dp"
+        android:paddingHorizontal="20dp"
+        android:hint="Email"
+        android:drawableLeft="@drawable/ic_email"
+        android:textColor="?attr/colorOnPrimary"
+        android:drawablePadding="8dp"/>
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:id="@+id/ed_login_password"
-                android:background="@drawable/custom_edittext"
-                android:layout_marginTop="20dp"
-                android:inputType="textPassword"
-                android:paddingVertical="8dp"
-                android:paddingHorizontal="20dp"
-                android:hint="Password"
-                android:drawableLeft="@drawable/ic_lock"
-                android:textColor="?attr/colorPrimary"
-                android:drawablePadding="8dp"/>
+    <com.example.storyapp.ui.custom.PasswordEditText
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:id="@+id/ed_login_password"
+        android:background="@drawable/custom_edittext"
+        android:layout_marginTop="20dp"
+        android:inputType="textPassword"
+        android:paddingVertical="8dp"
+        android:paddingHorizontal="20dp"
+        android:hint="Password"
+        android:drawableLeft="@drawable/ic_lock"
+        android:textColor="?attr/colorPrimary"
+        android:drawablePadding="8dp"/>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/wrongCredentialsTextView"
-                android:textColor="@color/red"
-                android:layout_marginTop="10dp"
-                android:visibility="gone"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/wrongCredentialsTextView"
+        android:textColor="@color/red"
+        android:layout_marginTop="10dp"
+        android:visibility="gone"/>
 
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginTop="30dp">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginTop="30dp">
 
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="Login"
-                    android:textColor="?attr/colorPrimary"
-                    android:id="@+id/loginButton"
-                    android:textSize="18sp"
-                    android:backgroundTint="?attr/colorOnPrimary"
-                    app:cornerRadius="5dp"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Login"
+            android:textColor="?attr/colorPrimary"
+            android:id="@+id/loginButton"
+            android:textSize="18sp"
+            android:backgroundTint="?attr/colorOnPrimary"
+            app:cornerRadius="5dp"/>
 
-                <ProgressBar
-                    android:id="@+id/loginProgressBar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:tint="?attr/colorPrimary"
-                    android:visibility="gone"/>
-            </FrameLayout>
+        <ProgressBar
+            android:id="@+id/loginProgressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:backgroundTint="?attr/colorPrimary"
+            android:tint="?attr/colorPrimary"
+            android:visibility="gone"/>
+    </FrameLayout>
 
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp">
 
-                <Button
-                    android:id="@+id/goToRegisterButton"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="Don't have an account? Register here"
-                    android:textColor="?attr/colorOnPrimary"
-                    app:cornerRadius="5dp"
-                    android:backgroundTint="?attr/colorPrimaryVariant"/>
+        <Button
+            android:id="@+id/goToRegisterButton"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Don't have an account? Register here"
+            android:textColor="?attr/colorOnPrimary"
+            app:cornerRadius="5dp"
+            android:backgroundTint="?attr/colorPrimaryVariant"/>
 
-                <ProgressBar
-                    android:id="@+id/registerProgressBar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:tint="?attr/colorOnPrimary"
-                    android:visibility="gone"/>
-            </FrameLayout>
+        <ProgressBar
+            android:id="@+id/registerProgressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:tint="?attr/colorOnPrimary"
+            android:visibility="gone"/>
+    </FrameLayout>
 
 </LinearLayout>
