--- a/app/src/main/res/layout/fragment_add_story.xml
+++ b/app/src/main/res/layout/fragment_add_story.xml
@@ -4,119 +4,114 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="?attr/colorPrimaryVariant">
+    android:background="?attr/colorPrimaryVariant"
+    android:layout_marginTop="?attr/actionBarSize">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appBarLayout"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimaryVariant"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:background="@drawable/bg_shape"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:iconTint="?attr/colorPrimary"
-            android:tint="?attr/colorPrimary"
-            app:titleTextAppearance="@style/ToolbarTitleTextStyle" />
-    </com.google.android.material.appbar.AppBarLayout>
+            android:layout_height="wrap_content">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/previewCardView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
-        android:layout_margin="20dp"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="10dp">
+            <androidx.cardview.widget.CardView
+                android:id="@+id/previewCardView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scaleType="fitCenter"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_margin="20dp"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="10dp"
+                tools:ignore="MissingConstraints">
 
-        <ImageView
-            android:id="@+id/previewImageView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </androidx.cardview.widget.CardView>
+                <ImageView
+                    android:id="@+id/previewImageView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </androidx.cardview.widget.CardView>
 
-    <LinearLayout
-        android:id="@+id/buttonLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/previewCardView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="20dp">
+            <LinearLayout
+                android:id="@+id/buttonLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintTop_toBottomOf="@+id/previewCardView"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_margin="20dp">
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/galleryButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginEnd="10dp"
-            android:text="@string/gallery"
-            app:strokeColor="?attr/colorOnPrimary"
-            android:textStyle="bold"
-            android:textColor="?attr/colorOnPrimary"
-            app:strokeWidth="2dp"
-            app:cornerRadius="10dp"
-            app:backgroundTint="@android:color/transparent" />
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/galleryButton"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginEnd="10dp"
+                    android:text="@string/gallery"
+                    app:strokeColor="?attr/colorOnPrimary"
+                    android:textStyle="bold"
+                    android:textColor="?attr/colorOnPrimary"
+                    app:strokeWidth="2dp"
+                    app:cornerRadius="10dp"
+                    app:backgroundTint="@android:color/transparent" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/cameraButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginStart="10dp"
-            android:text="@string/camera"
-            app:strokeColor="?attr/colorOnPrimary"
-            android:textStyle="bold"
-            android:textColor="?attr/colorOnPrimary"
-            app:strokeWidth="2dp"
-            app:cornerRadius="10dp"
-            app:backgroundTint="@android:color/transparent" />
-    </LinearLayout>
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/cameraButton"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginStart="10dp"
+                    android:text="@string/camera"
+                    app:strokeColor="?attr/colorOnPrimary"
+                    android:textStyle="bold"
+                    android:textColor="?attr/colorOnPrimary"
+                    app:strokeWidth="2dp"
+                    app:cornerRadius="10dp"
+                    app:backgroundTint="@android:color/transparent" />
+            </LinearLayout>
 
-    <EditText
-        android:id="@+id/ed_add_description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:gravity="start|top"
-        android:inputType="textMultiLine"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonLayout" />
+            <EditText
+                android:id="@+id/ed_add_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:padding="10dp"
+                android:hint="Story Description"
+                android:gravity="start|top"
+                android:inputType="textMultiLine"
+                android:background="@drawable/custom_edittext"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/buttonLayout" />
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_margin="20dp"
-        android:layout_height="60dp"
-        app:layout_constraintTop_toBottomOf="@+id/ed_add_description">
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_margin="20dp"
+                android:layout_height="60dp"
+                app:layout_constraintTop_toBottomOf="@+id/ed_add_description">
 
-        <Button
-            android:id="@+id/button_add"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:backgroundTint="?attr/colorOnPrimary"
-            android:text="Upload Story"
-            android:textColor="?attr/colorPrimary"
-            android:textSize="18sp"
-            app:cornerRadius="5dp" />
+                <Button
+                    android:id="@+id/button_add"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:backgroundTint="?attr/colorOnPrimary"
+                    android:text="Upload Story"
+                    android:textColor="?attr/colorPrimary"
+                    android:textSize="18sp"
+                    app:cornerRadius="5dp" />
 
-        <ProgressBar
-            android:id="@+id/uploadStoryProgressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:tint="?attr/colorPrimary"
-            android:visibility="gone" />
-    </FrameLayout>
-
-
+                <ProgressBar
+                    android:id="@+id/uploadStoryProgressBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:tint="?attr/colorPrimary"
+                    android:visibility="gone" />
+            </FrameLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
