--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -11,110 +11,124 @@
     android:padding="20dp"
     tools:context=".MainActivity">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Register"
-                android:id="@+id/registerText"
-                android:textSize="36sp"
-                android:textAlignment="center"
-                android:textStyle="bold"
-                android:textColor="?attr/colorOnPrimary"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Register"
+        android:id="@+id/registerText"
+        android:textSize="36sp"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:textColor="?attr/colorOnPrimary"/>
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:id="@+id/ed_register_name"
-                android:background="@drawable/custom_edittext"
-                android:layout_marginTop="40dp"
-                android:paddingVertical="8dp"
-                android:paddingHorizontal="20dp"
-                android:hint="Name"
-                android:drawableLeft="@drawable/ic_person"
-                android:textColor="?attr/colorOnPrimary"
-                android:drawablePadding="8dp"/>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:id="@+id/ed_register_name"
+        android:background="@drawable/custom_edittext"
+        android:layout_marginTop="40dp"
+        android:paddingVertical="8dp"
+        android:paddingHorizontal="20dp"
+        android:hint="Name"
+        android:drawableLeft="@drawable/ic_person"
+        android:textColor="?attr/colorOnPrimary"
+        android:drawablePadding="8dp"/>
 
-            <com.example.storyapp.ui.custom.EmailEditText
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:id="@+id/ed_register_email"
-                android:background="@drawable/custom_edittext"
-                android:layout_marginTop="20dp"
-                android:paddingVertical="8dp"
-                android:paddingHorizontal="20dp"
-                android:hint="Email"
-                android:drawableLeft="@drawable/ic_email"
-                android:textColor="?attr/colorOnPrimary"
-                android:drawablePadding="8dp"/>
+    <com.example.storyapp.ui.custom.EmailEditText
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:id="@+id/ed_register_email"
+        android:background="@drawable/custom_edittext"
+        android:layout_marginTop="20dp"
+        android:paddingVertical="8dp"
+        android:paddingHorizontal="20dp"
+        android:hint="Email"
+        android:drawableLeft="@drawable/ic_email"
+        android:textColor="?attr/colorOnPrimary"
+        android:drawablePadding="8dp"/>
 
-            <com.example.storyapp.ui.custom.PasswordEditText
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:id="@+id/ed_register_password"
-                android:background="@drawable/custom_edittext"
-                android:layout_marginTop="20dp"
-                android:inputType="textPassword"
-                android:paddingVertical="8dp"
-                android:paddingHorizontal="20dp"
-                android:hint="Password"
-                android:drawableLeft="@drawable/ic_lock"
-                android:textColor="?attr/colorPrimary"
-                android:drawablePadding="8dp"/>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/registeredEmailTextView"
-                android:textColor="@color/red"
-                android:layout_marginTop="10dp"
-                android:visibility="gone"/>
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginTop="30dp">
-
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="Register"
-                    android:id="@+id/registerButton"
-                    android:textSize="18sp"
-                    android:backgroundTint="?attr/colorOnPrimary"
-                    android:textColor="?attr/colorPrimary"
-                    app:cornerRadius="5dp"/>
-
-                <ProgressBar
-                    android:id="@+id/registerProgressBar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:backgroundTint="?attr/colorPrimary"
-                    android:tint="?attr/colorPrimary"
-                    android:visibility="gone"/>
-            </FrameLayout>
-
-        <FrameLayout
+        <com.example.storyapp.ui.custom.PasswordEditText
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/ed_register_password"
+            android:background="@drawable/custom_edittext"
+            android:inputType="textPassword"
+            android:paddingVertical="8dp"
+            android:paddingHorizontal="20dp"
+            android:hint="Password"
+            android:drawableLeft="@drawable/ic_lock"
+            android:textColor="?attr/colorPrimary"
+            android:drawablePadding="8dp"/>
+
+        <ImageView
+            android:id="@+id/passwordVisibilityToggle"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp">
+            android:layout_gravity="end|center_vertical"
+            android:padding="8dp"
+            android:src="@drawable/ic_visibility_off"
+            android:contentDescription="@string/toggle_password_visibility"/>
+    </FrameLayout>
 
-            <Button
-                android:id="@+id/goToLoginButton"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Already have an account? Sign in here"
-                android:textColor="?attr/colorOnPrimary"
-                app:cornerRadius="5dp"
-                android:backgroundTint="?attr/colorPrimaryVariant"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/registeredEmailTextView"
+        android:textColor="@color/red"
+        android:layout_marginTop="10dp"
+        android:visibility="gone"/>
 
-            <ProgressBar
-                android:id="@+id/loginProgressBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:tint="?attr/colorOnPrimary"
-                android:visibility="gone"/>
-        </FrameLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginTop="30dp">
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Register"
+            android:id="@+id/registerButton"
+            android:textSize="18sp"
+            android:backgroundTint="?attr/colorOnPrimary"
+            android:textColor="?attr/colorPrimary"
+            app:cornerRadius="5dp"/>
+
+        <ProgressBar
+            android:id="@+id/registerProgressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:backgroundTint="?attr/colorPrimary"
+            android:tint="?attr/colorPrimary"
+            android:visibility="gone"/>
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp">
+
+        <Button
+            android:id="@+id/goToLoginButton"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Already have an account? Sign in here"
+            android:textColor="?attr/colorOnPrimary"
+            app:cornerRadius="5dp"
+            android:backgroundTint="?attr/colorPrimaryVariant"/>
+
+        <ProgressBar
+            android:id="@+id/loginProgressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:tint="?attr/colorOnPrimary"
+            android:visibility="gone"/>
+    </FrameLayout>
 
 </LinearLayout>
