--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -30,6 +30,7 @@
         android:paddingVertical="8dp"
         android:paddingHorizontal="20dp"
         android:hint="Name"
+        android:textColorHint="@color/gray"
         android:drawableLeft="@drawable/ic_person"
         android:textColor="?attr/colorOnPrimary"
         android:drawablePadding="8dp"/>
@@ -43,6 +44,7 @@
         android:paddingVertical="8dp"
         android:paddingHorizontal="20dp"
         android:hint="Email"
+        android:textColorHint="@color/gray"
         android:drawableLeft="@drawable/ic_email"
         android:textColor="?attr/colorOnPrimary"
         android:drawablePadding="8dp"/>
@@ -61,6 +63,7 @@
             android:paddingVertical="8dp"
             android:paddingHorizontal="20dp"
             android:hint="Password"
+            android:textColorHint="@color/gray"
             android:drawableLeft="@drawable/ic_lock"
             android:textColor="?attr/colorPrimary"
             android:drawablePadding="8dp"/>
@@ -108,27 +111,14 @@
             android:visibility="gone"/>
     </FrameLayout>
 
-    <FrameLayout
+    <Button
+        android:id="@+id/goToLoginButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp">
-
-        <Button
-            android:id="@+id/goToLoginButton"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Already have an account? Sign in here"
-            android:textColor="?attr/colorOnPrimary"
-            app:cornerRadius="5dp"
-            android:backgroundTint="?attr/colorPrimaryVariant"/>
-
-        <ProgressBar
-            android:id="@+id/loginProgressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:tint="?attr/colorOnPrimary"
-            android:visibility="gone"/>
-    </FrameLayout>
+        android:layout_marginTop="20dp"
+        android:text="Already have an account? Sign in here"
+        android:textColor="?attr/colorOnPrimary"
+        app:cornerRadius="5dp"
+        android:backgroundTint="?attr/colorPrimaryVariant"/>
 
 </LinearLayout>
